--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,19 @@
 {
-    "name": "aviwar/iot",
-    "minimum-stability": "dev",
-    "require": {
-        "php": ">=7.2",
-        "slim/slim": "^3.1",
-        "slim/twig-view": "^2.1",
-        "slim/flash": "^0.4.0",
-        "respect/validation": "^2.0",
-        "phpmailer/phpmailer": "~6.1"
-    },
-    "autoload": {
-        "psr-4": {
-            "Iot\\": "app"
-        }
-    },
-    "config": {
-        "secure-http":false
+  "name": "aviwar/iot",
+  "minimum-stability": "dev",
+  "require": {
+    "php": ">=7.2",
+    "slim/slim": "^3.1",
+    "slim/twig-view": "^2.1",
+    "slim/flash": "^0.4.0",
+    "respect/validation": "^2.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "Iot\\": "app"
     }
+  },
+  "config": {
+    "secure-http": false
+  }
 }
